[package]
name = "rp-128"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
fugit = "0.3.6"
gc9a01a = "0.1.0"
rp-pico = "0.7.0"
tinybmp = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
