[package]
name = "rp-128"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.4"
defmt-rtt = "0.4.0"
display-interface-spi = "0.4.1"
eg-seven-segment = "0.1.0"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
fugit = "0.3.6"
gc9a01a = "0.1.0"
heapless = "0.7.16"
panic-probe = { version = "0.3.1" , features = ["print-defmt"] }
rp-pico = "0.7.0"
tinybmp = "0.4.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
